# ib-desk

./: .editorconfig  .gitattributes  .gitignore  BUILD_PLAN.md  CLAUDE.md  DEPLOY.md  Makefile  README.md  package.json  pnpm-lock.yaml  render.yaml
services/api/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
services/api/app/: config.py  db.py  main.py  models.py  normalization.py  parsing.py  ratelimit.py  routes.py  seed.py  storage.py
services/api/app/export/: __init__.py  csvexport.py  palette.py  workbook.py
services/api/app/extraction/: __init__.py  chunking.py  cost.py  grounding.py  llm.py  persist.py  pipeline.py  render_typing.py  schemas.py  valuenorm.py
services/api/app/extraction/prompts/: __init__.py  discovery.py  extraction.py  taxonomy.py  verification.py
services/api/tests/: conftest.py  fixtures_gen.py  test_bad_input.py  test_chunking.py  test_cost.py  test_dedupe.py  test_documents.py  test_export.py  test_export_api.py  test_extract_api.py  test_grounding.py  test_health.py  test_isolation.py  test_migration.py  test_normalization.py  test_parsing.py  test_paste_roundtrip.py  test_pipeline.py  test_pipeline_discovery.py  test_prompts.py  test_ratelimit.py  test_ratelimit_api.py  test_scanned_rejection.py  test_seed_constants.py  test_sheet_roundtrip.py  test_upload_roundtrip.py  test_valuenorm.py
services/api/tests/cassettes/basic/: discovery.json  extract.investors_capital.json  extract.json  verify.investors_capital.json  verify.json
services/api/tests/cassettes/error_isolation/: discovery.json  extract.c0.json  (+3 more)
(+67 files in other folders)
